test/integration/bad/functions-bad30.stan
functions {
  real generated(real bar) {
    return bar;
  }
}
